--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,10 +5,9 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-  workflow_dispatch: # Enables manual trigger for production deployment
+  workflow_dispatch:
 
 jobs:
-  # Job to run linting and testing on every commit
   test-and-lint:
     runs-on: ubuntu-latest
     strategy:
@@ -41,7 +40,6 @@ jobs:
           cd ${{ matrix.directory }}
           npm run test
 
-  # Job to deploy to staging when merged to main
   deploy-staging:
     runs-on: ubuntu-latest
     needs: test-and-lint
@@ -59,7 +57,6 @@ jobs:
           # Example: docker build -t myapp:staging .
           echo "✅ Staging deployment completed"
 
-  # Job to deploy to production (manual trigger only)
   deploy-production:
     runs-on: ubuntu-latest
     needs: test-and-lint
