--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon src/server.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/server.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "jest",
@@ -42,7 +42,8 @@
   "dependencies": {
     "dotenv": "^17.2.2",
     "fastify": "^5.6.1",
+    "fastify-healthcheck": "^5.1.0",
     "graphql": "^16.11.0",
-    "mercurius": "^16.2.0"
+    "ts-node-dev": "^2.0.0"
   }
 }
