--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/server.ts",
+    "dev": "NODE_ENV=development tsx --watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "lint": "eslint .",
@@ -32,18 +32,20 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
     "jest": "^30.1.3",
-    "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@pothos/core": "^4.9.1",
     "dotenv": "^17.2.2",
     "fastify": "^5.6.1",
     "fastify-healthcheck": "^5.1.0",
     "graphql": "^16.11.0",
-    "ts-node-dev": "^2.0.0"
+    "graphql-yoga": "^5.16.0",
+    "tslib": "^2.8.1"
   }
 }
