--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/amqplib": "^0.10.7",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.5.2",
     "@types/supertest": "^6.0.3",
@@ -41,6 +42,7 @@
   },
   "dependencies": {
     "@pothos/core": "^4.9.1",
+    "amqplib": "^0.10.9",
     "dotenv": "^17.2.2",
     "fastify": "^5.6.1",
     "fastify-healthcheck": "^5.1.0",
